# PRism

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  pipeline.py
app/ai/: anthropic_provider.py  heuristic_review.py  mock_provider.py  prompts.py  provider.py  reviewer.py  schema.py
app/api/: routes_analyses.py  routes_analyze.py  routes_eval.py  routes_health.py  routes_webhook.py
app/core/: config.py  logging.py
app/db/: __init__.py  models.py  queries.py  repository.py  seed.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial.py
app/diff/: models.py  parser.py  risk.py
app/eval/: __init__.py  metrics.py  runner.py
app/github/: __init__.py  app_auth.py  client.py  render.py  webhook.py
app/ingest/: fixtures.py
app/retrieval/: __init__.py  embeddings.py  store.py
docs/: demo-script.md  interview-story.md  technical-design.md
eval/: run_eval.py
eval/fixtures/sample_prs/add-orders-api-endpoint/: diff.patch  expected.json  metadata.json
eval/fixtures/sample_prs/add-orders-table/: diff.patch  expected.json  metadata.json
eval/fixtures/sample_prs/auth-token-expiry/: diff.patch  expected.json  metadata.json
eval/fixtures/sample_prs/bump-dependencies/: diff.patch  expected.json  metadata.json
eval/fixtures/sample_prs/large-refactor-logging/: diff.patch  expected.json  metadata.json
eval/fixtures/sample_prs/remove-legacy-tests/: diff.patch  expected.json  metadata.json
eval/fixtures/sample_prs/update-env-config/: diff.patch  expected.json  (+1 more)
eval/results/: latest.json
tests/: conftest.py  test_analyze_fixture.py  test_analyze_persist.py  test_config.py  test_health.py  test_read_endpoints.py
tests/ai/: test_reviewer.py
tests/db/: test_persistence.py
tests/diff/: test_parser.py  test_risk.py
tests/eval/: test_metrics.py  test_runner.py
tests/github/: support.py  test_app_auth.py  test_endpoint.py  test_payload.py  test_render.py  test_signature.py  test_worker.py
tests/retrieval/: test_embeddings.py  test_similarity.py
web/: .gitignore  package-lock.json  package.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: error.tsx  loading.tsx  page.tsx
web/app/eval/: error.tsx  loading.tsx  page.tsx
web/components/: ChangedFilesTable.tsx  ConcernList.tsx  MetricCard.tsx  RiskBadge.test.tsx  RiskBadge.tsx  RiskScoreCard.tsx  SimilarPRs.tsx  SuggestedTests.tsx
web/lib/: api.ts  format.test.ts  format.ts  types.ts
(+3 files in other folders)
