[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism"
version = "0.1.0"
description = "PRism — AI PR Reviewer + Regression Triage platform (backend)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "anshbabar" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
# pycodestyle (E), pyflakes (F), isort (I), bugbear (B), pyupgrade (UP)
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
packages = ["app"]
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
