[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prism"
version = "0.1.0"
description = "PRism — AI PR Reviewer + Regression Triage platform (backend)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "anshbabar" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.40",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",          # outbound GitHub API client (also used by the test client)
    "pyjwt[crypto]>=2.8",   # RS256 App JWT for GitHub App auth
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]
# Alembic migrations are generated/boilerplate; don't lint them.
extend-exclude = ["app/db/migrations"]

[tool.ruff.lint]
# pycodestyle (E), pyflakes (F), isort (I), bugbear (B), pyupgrade (UP)
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
packages = ["app"]
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
# Alembic migrations are script-style (dynamic globals); not worth type-checking.
exclude = ["app/db/migrations/"]
